# esp32-filament-dryer

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DOCKER_TESTING_README.md  FILES.md  GEMINI.md  HEATER_CONTROL_PRD.md  LVGL_MIGRATION.md  README.md  esp_idf_shell.bat  idf_component.yml  lv_conf.h  partitions.csv  progress.txt  qemu_demo.bat  requirements-dev.txt  sdkconfig.defaults  sdkconfig.h  ui_simulator_plan.md
.clinerules/: esp-idf.rules  git.rules  hardware.rules  testing.rules
.gemini/skills/: testing.skill.txt  windows.skill.txt
.opencode/: opencode.json
.opencode/agents/: git_commit_assistant.md  idf.md  ui_simulator.md  url_snapshot.md
.opencode/plans/: ui_simulator_fix.md
.opencode/skills/esp-idf-workflow/: SKILL.md
.opencode/skills/esp32-testing-patterns/: SKILL.md
.opencode/skills/subagent-creation/: SKILL.md
.opencode/skills/windows-development/: SKILL.md
.opencode/subagents/: git_commit_assistant.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/heater_control_system_20260114/: index.md  metadata.json  plan.md  spec.md
docker_tests/: Dockerfile  docker-compose.yml  generate_mocks.bat  mock_adc.h  pytest_hello_world.py  run_tests.bat  run_unit_tests.bat  test_script.sh
docker_tests/unit_tests/: CMakeLists.txt  circular_buffer_simple.c  cmock.yml  generate_mocks.sh  run_unit_tests.sh  test_circular_buffer_simple.c  test_main.c
docker_tests/unit_tests/main/: CMakeLists.txt  Mockesp_adc_mock_headers.c  Mockesp_adc_mock_headers.h  esp_adc_mock_headers.h  mock_adc.c  test_circular_buffer.c  test_circular_buffer_simple.c  test_controller.c  test_framework.h  test_heater.c  test_main.c  test_temp.c  test_temperature.c  test_version.c
docker_tests/unit_tests/mock_headers/: esp_heap_caps.h  esp_log.h  esp_log_wrapper.h  mock_esp_heap_caps.h  mock_esp_log.h  mock_heater.h  mock_semphr.h  mock_sysmon_wrapper.h  mock_task.h
docker_tests/unit_tests/mock_headers/esp_adc/: adc_cali.h  adc_cali_scheme.h  adc_oneshot.h
docker_tests/unit_tests/mock_headers/freertos/: FreeRTOS.h  mock_task.h  semphr.h  task.h
docker_tests/unit_tests/mock_headers/hal/: adc_types.h
docs/: explanation.md
include/: circular_buffer.h  controller.h  diagnostic.h  display.h  heater.h  heater_controller.h  ota.h  product_pins.h  startup_tests.h  sysmon_wrapper.h  temp.h  version.h  version.h.in  web_server.h  wifi.h  wifi_credentials.h.template
include/ui/: analog_dial.h  subjects.h  ui.h
main/: CMakeLists.txt  Kconfig.projbuild  circular_buffer.c  controller.c  diagnostic.c  display.c  heater.c  heater_controller.c  hello_world_main.c  idf_component.yml  main.c  ota.c  startup_tests.c  sysmon_wrapper.c  temp.c  version.c  web_server.c  wifi.c
main/ui/: analog_dial.c  analog_dial.h  subjects.c  ui.c  ui.h
main/web/: web_handlers.c  web_server_init.c  web_websocket.c
ota-server/: ota-server.js  package-lock.json  package.json
schematic/: schematic.kicad_pro  schematic.kicad_sch
scripts/: build_with_version_increment.bat  increment_version.py  update_version.py
ui_simulator/: CMakeLists.txt  Dockerfile  README.md  build_docker.bat  build_docker.sh  build_sim.bat  build_sim.sh  docker-compose.yml  lv_conf.h  shell.html  start_server.bat
ui_simulator/docker_root/: CMakeLists.txt  CMakeLists_prebuilt.txt  build_script.sh  esp_log.h  esp_lvgl_port.h  lv_conf.h  prebuild_libs.sh  shell.html
ui_simulator/docker_root/src/: main.c  mock_data_task.c
ui_simulator/src/: main.c  main.c.bak  ui_stub.c  ui_stub.h
web/: .env.example  WORKFLOW.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx
