idf_component_register(
    SRCS
        "test_main.c"
        "test_circular_buffer.c"
        "test_version.c"
        "test_temperature.c"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../../main/circular_buffer.c"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../../main/version.c"
    INCLUDE_DIRS
        "${CMAKE_CURRENT_SOURCE_DIR}/../../../include"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../../main"
        "${CMAKE_CURRENT_SOURCE_DIR}/.."
    REQUIRES
        unity
)
